feat: :sparkles: List all active in rest controller and repository
